Fix firefox logo not centered

--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -229,6 +229,11 @@ canvas {
 	padding-top: 5vh;
 }
 
+#logo-firefox {
+	margin: auto;
+	display: block;
+}
+
 select {
     background-color: #f9f9f9;
     box-shadow: 0px 0px 1rem 0px rgba(180, 180, 180);
